--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,3 +1,5 @@
+<link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Noto Serif' rel='stylesheet'>
 <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-114x114.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-72x72.png" />
